# twin

./: .gitignore  COMPILING  CONTRIBUTORS  ChangeLog  ChangeLog.old  FAQ  INSTALL  Make.rules.in  Makefile.in  README  README-NEW  README-OLD  TODO  configure  configure.in  readme.md  twinrc  win.ini
TMP/: readme
TMP/system/: readme
controls/: Button.c  ButtonDraw.c  ComboBox.c  Edit.c  Edit.h  EditDraw.c  EditKey.c  EditMem.c  EditMisc.c  Editx.h  Frame.c  Listbox.c  Makefile.in  Scroll.c  Static.c
debugger/: Makefile.in  break.c  db_disasm.c  db_disasm.h  dbg.y  debug.l  debugger.h  display.c  expr.c  expr.h  glue.c  hash.c  info.c  memory.c  module.h  registers.c  selectors.h  sig_context.h  source.c  stabs.c  stack.c  types.c
dlls/: Makefile.in
dlls/advapi32/: Makefile.in  advapi.c  advapi32.c  advapi32.d  advapi32.def  advapi32.h  advapi32Bin.c  advapi32Bin.h
dlls/comm/: Comm.def  CommBin.c  CommDrv.c  Makefile.in
dlls/commctrl/: CommCtrl.c  Makefile.in  WCommCtrl.def  WCommCtrl.h  WCommCtrl.rc  WCommctl.c  WDragLbx.c  WHdr.c  WImgList.c  WImgList.h  WLVHelpr.c  WLVLBox.c  WLView.c  WProgBar.c  WPropsht.c  WPropsht.h  WStatusb.c  WTVLBox.c  WTView.c  WTab.c  WTlbCust.c  WToolbar.c  WTooltip.c  WTrackbr.c  commctrl32.c  commctrl32.d  commctrl32.h  commctrl32Bin.c  commctrl32Bin.h
dlls/commdlg/: ChooseColor.c  ChooseFont.c  Commdlg.c  Commdlg.def  Commdlg.rc  CommdlgIF.c  CommdlgIT.c  FindReplDlg.c  GetOpenFileName.c  Makefile.in  PrintDlg.c  commdlg32.c  commdlg32.d  commdlg32.h  commdlg32Bin.c  commdlg32Bin.h
dlls/ddeml/: DdeML.c  DdeMLBin.c  DdeMLDefs.h  Makefile.in
dlls/keyboard/: KeyboardBin.c  KeyboardIF.c  Makefile.in  SysKeyboard.c
dlls/libdll/: DummyEnviron.c  Makefile.in
dlls/lzexpand/: LZExpand.c  LZExpandBin.c  Makefile.in
dlls/msvcrt/: Makefile.in  msvcrt.c  msvcrt.def  msvcrt32.c  msvcrt32.d  msvcrt32.h  msvcrt32Bin.c  msvcrt32Bin.h
dlls/shell/: About.c  About.def  About.h  About.rc  DragDrop.c  Makefile.in  Registry.c  Shell.c  ShellIF.c  shell32.c  shell32.d  shell32.h  shell32Bin.c  shell32Bin.h
dlls/sound/: Makefile.in  SoundBin.c
dlls/system/: Makefile.in  System.c  System.def  SystemIF.c
dlls/toolhelp/: Info.c  Makefile.in  Task.c  ToolHelp.c  ToolHelp.def  ToolHelpIF.c  debugger.c  segtab.c
dlls/version/: Makefile.in  Ver.c  Ver.def  VerBin.c  VerIF.c  version32.c  version32.d  version32.h  version32Bin.c  version32Bin.h
dlls/w32sys/: Makefile.in  w32sys.c  w32sys.def  w32sysBin.c
dlls/win87em/: Makefile.in  win87em.c  win87em.def  win87emIF.c
dlls/winsock/: Makefile.in  WinSock.c  WinSockBin.c  WinSockIF.c
dlls/winspool/: Makefile.in  winspool.c  winspool.def  winspool32.c  winspool32.d  winspool32.h  winspool32Bin.c  winspool32Bin.h
documentation/: bin-convert.txt  config.doc  dll-binary.txt  dll-native.txt  lib-config.txt  lib-qna.txt  lib-thunk.c  readme.twinrc  sample.twinrc  twinrc.doc  win.ini
graphics/: GdiBitmaps.c  GdiBoundsRect.c  GdiClipping.c  GdiDC.c  GdiDCAttr.c  GdiGraphics.c  GdiImages.c  GdiMath.c  GdiObjects.c  GdiRegions.c  GdiTTEngine.c  GdiText.c  Makefile.in
graphics/x11drv/: DrvColors.c  DrvCommon.h  DrvConfig.c  DrvCursor.c  DrvDC.c  DrvDP.h  DrvEvents.c  DrvFloodFill.c  DrvGraphics.c  DrvIPC.c  DrvImages.c  DrvInit.c  DrvInit.h  DrvKeyboard.c  DrvPrinting.c  DrvRegions.c  DrvText.c  DrvText.h  DrvUtils.c  DrvWinSock.c  DrvWindows.c  Makefile.in  XEvents.c  XICCCM.c
if1632/: Bin16.c  Callback.c  CommIF.c  ConvertMsg.c  GenericIF.c  HookIF.c  Makefile.in  MemoryIF.c  OEMRoutines.c  PrintIF.c  SpecialIF.c  invoke_binary.c  make_thunk.c
include/: Bin32.h  Log.h  ModTable.h  Module.h  Net.h  ObjEngine.h  Resources.h  Segment.h  WinMalloc.h  cderr.h  commctrl.h  commdlg.h  compobj.h  debug.h  debugdefs.h  debugtools.h  dir.h  dos.h  inifile.h  io.h  kerndef.h  ldt.h  mmsystem.h  mtlock.h  platform.h.in  print.h  prsht.h  shellapi.h  tchar.h  thread.h  toolhelp.h  twindlfcn.h  twindll.h  twinhelp.h  twinrt.h  winbase.h  wincon.h  windef.h  windows.h  winerror.h  (+9 more)
intp32/: Makefile.in  cpu-emu.h  dis8086.c  emu-ldt.h  emu-utils.c  external.c  fp87.c  hsw_interp.h  internal.h  interp_16_32.c  interp_32_16.c  interp_32_32.c  interp_main.c  interp_modrm.c
memory/: Makefile.in  heap.c  heap32.h  memory.c  virtual.c  virtual.h
mfc/: Makefile.in  Readme
msdos/: Makefile.in  dos_error.c  dos_findfile.c  dos_int86.c  fat_core.c  fat_fileio.c  fat_findfile.c  fat_lib.c  fn_36.c  int_1a.c  int_21.c  int_3d.c  mfs_config.c  mfs_core.c  mfs_core.h  mfs_fileio.c  mfs_findfile.c  msclib.c
multimedia/: MCI.c  MMBin.c  MMIF.c  Makefile.in  MultiMedia.c  MultiMedia.def  midi.c  wave.c
ole/: CliBin.c  Makefile.in  OleCliIF.c  OleSvr.c  OleSvrIF.c  SvrBin.c  olecli.def  olesvr.def
osdll/: DrvDlfcn.c  DrvFiles.c  DrvSystem.c  DrvSystem_ppc-gcc.s  DrvSystem_sparc.s  DrvThreads.h  DrvThreads_X386.c  DrvThreads_generic.c  DrvThreads_nothreads.c  DrvTime.c  Makefile.in
programs/: Makefile.in
programs/prnsetup/: Makefile.in  prndc.c  prnsetup.c  prnsetup.h  prnsetup.rc  resource.h
readline/: Makefile.in  complete.c  editline.3  editline.c  editline.h  os9.h  sysos9.c  sysunix.c  testit.c  unix.h
samples/: Makefile.in
samples/apidemo/: Makefile.in  windemo.c
samples/bindemo/: Makefile.in  bindemo.c
scheduler/: CreateProcess.c  Critical.c  Interlock.c  Makefile.in  ThreadLocal.c  Threads.c
scripts/: ckspec.c  config.sub  fixme  initvars  isdefined  lsapi  mkdefined
tools/: Makefile.in  find_debug_channels  lzc.c  make_debug  mksrc  mksrc.c  mksym
tools/rc/: mdc.c  (+15 more)
win32/: LoadPE.c  Makefile.in  PE.def  Resources32.c
windows/: Classes.c  Clipboard.c  Clipboard.h  Comm.c  Comm.h  ConvertRes.c  DPMI.c  DPMI.h  DPMInotify.c  Debug.c  Debug.h  DefWnd.c  DeviceData.c  DeviceData.h  Dialog.c  DisplayGraphics.c  DisplayObjects.c  DisplayText.c  DrawFrame.c  DrawText.c  Driver.c  Driver.h  Events.c  Exec.c  Exec.h  ExecSysV.c  ExecUtl.S  Execfreebsd.c  Execintp.c  Execlinux.c  File32.c  FileSys.c  FormatMessage.c  GdiDC.h  GdiObjects.h  Kernel.c  Kernel.h  KrnFileIO.c  KrnTask.c  LoadDLL.c  (+79 more)
(+56 files in other folders)
